# intc

./: .gitignore  README.md  main.c
MyMavenProject/: build-fat-jar.sh  pom.xml  run-anywhere.sh  run-fat-jar.sh  run-game-full-path.sh  run-jar.sh  run.sh
MyMavenProject/src/main/java/main/java/com/example/: App.java  Game.java
MyMavenProject/src/main/java/main/java/com/example/entity/: Entity.java  Player.java
MyMavenProject/src/main/java/main/java/com/example/physics/: PhysicsEngine.java
MyMavenProject/src/main/java/main/java/com/example/render/: Camera.java  Renderer.java  ShaderProgram.java
MyMavenProject/src/main/native/: CMakeLists.txt
MyMavenProject/src/main/native/physics/: main_java_com_example_physics_PhysicsEngine.h  physics.c  physics.h
